added static files rendering and session cookies

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,6 +4,7 @@
     <title><%= title %></title>
   </head>
   <body>
+      <img src="img/logo.gif" alt="Logo">
       <center><h1><%= title %></h1></center>
   </body>
 </html>
