--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,6 +4,15 @@
     <title><%= title %></title>
   </head>
   <body>
+            <% if ( userFullName ) { %>
+        <h2>Hello <%=userFullName%> </h2> 
+        <a href="/signout">Sign out</a>
+      <% } else { %>
+        <a href="/signup">Signup</a>
+        <a href="/signin">Signin</a>
+    <% } %>
+    <br>
+
       <img src="img/logo.gif" alt="Logo">
       <center><h1><%= title %></h1></center>
   </body>
