--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:ng="http://angularjs.org">
   <head>
     <title><%= title %></title>
   </head>
@@ -17,5 +17,9 @@
 
       <img src="img/logo.gif" alt="Logo">
       <center><h1><%= title %></h1></center>
+      
+      
+      <script type="text/javascript" src="/lib/angular/angular.js"></script>
+      
   </body>
 </html>
