bootstraped angular application

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,22 +3,35 @@
   <head>
     <title><%= title %></title>
   </head>
-  <body>
-    <% if ( userFullName ) { %>
-        <h2>Hello <%=userFullName%> </h2> 
-        <a href="/signout">Sign out</a>
-      
-    <% } else { %>
-        <a href="/signup">Signup</a>
-        <a href="/signin">Signin</a>
-    <% } %>
-      
-    <br>
+    <body>
+    <center>
+        
+        <% if ( userFullName ) { %>
+            <h2>Hello <%=userFullName%> </h2> 
+            <a href="/signout">Sign out</a>
 
-      <img src="img/logo.gif" alt="Logo">
-      <center><h1><%= title %></h1></center>
+        <% } else { %>
+            <a href="/signup">Signup</a>
+            <a href="/signin">Signin</a>
+        <% } %>
+
+        <br>
+
+          <img src="img/logo.gif" alt="Logo">
+        
+    </center>
+        
+    <center><h1><%= title %></h1></center>
+      
+    <section>
+    <input type="text" id="text1" ng-model="name">
+    <input type="text" id="text2" ng-model="name">
+    </section>
+
+      
       
       <script type="text/javascript" src="/lib/angular/angular.js"></script>
+      <script type="text/javascript" src="/application.js"></script>
       
   </body>
 </html>
