--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -23,14 +23,11 @@
         
     <center><h1><%= title %></h1></center>
       
-    <section>
-    <input type="text" id="text1" ng-model="name">
-    <input type="text" id="text2" ng-model="name">
-    </section>
 
       
       
       <script type="text/javascript" src="/lib/angular/angular.js"></script>
+      <script type="text/javascript" src="/example/example.client.module.js"></script>
       <script type="text/javascript" src="/application.js"></script>
       
   </body>
