html render with ng-include

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -23,7 +23,7 @@
         
     <center><h1><%= title %></h1></center>
       
-
+      <section ng-include="'example/views/example.client.view.html'"></section>
       
       
       <script type="text/javascript" src="/lib/angular/angular.js"></script>
