--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -19,16 +19,20 @@
 
           <img src="img/logo.gif" alt="Logo">
         
+        <section ng-view></section>
+        
     </center>
         
     <center><h1><%= title %></h1></center>
       
-      <section ng-include="'example/views/example.client.view.html'"></section>
+     
       
       
       <script type="text/javascript" src="/lib/angular/angular.js"></script>
+      <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
       <script type="text/javascript" src="/example/example.client.module.js"></script>
       <script type="text/javascript" src="/example/controllers/example.client.controller.js"></script>
+      <script type="text/javascript" src="/example/config/example.client.routes.js"></script>
       <script type="text/javascript" src="/application.js"></script>
       
   </body>
