--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,8 +6,8 @@
     <body>
     <center>
         
-        <% if ( userFullName ) { %>
-            <h2>Hello <%=userFullName%> </h2> 
+        <% if ( user ) { %>
+         
             <a href="/signout">Sign out</a>
 
         <% } else { %>
@@ -25,7 +25,10 @@
         
     <center><h1><%= title %></h1></center>
       
-     
+    <script type="text/javascript">
+        window.user = <%- user || 'null' %>;
+    </script>
+
       
       
       <script type="text/javascript" src="/lib/angular/angular.js"></script>
