--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -30,7 +30,7 @@
     </script>
 
       
-      
+      <script type="text/javascript" src="/socket.io/socket.io.js"></script>
       <script type="text/javascript" src="/lib/angular/angular.js"></script>
       <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
       <script type="text/javascript" src="/lib/angular-resource/angular-resource.js"></script>  
@@ -47,6 +47,13 @@
       <script type="text/javascript" src="/example/config/example.client.routes.js"></script>
       <script type="text/javascript" src="/users/users.client.module.js"></script>
       <script type="text/javascript" src="/users/services/authentication.client.service.js"></script>
+        
+     <script type="text/javascript" src="/chat/chat.client.module.js"></script>
+     <script type="text/javascript" src="/chat/services/socket.client.service.js"></script>
+     <script type="text/javascript" src="/chat/controllers/chat.client.controller.js"></script>
+     <script type="text/javascript" src="/chat/config/chat.client.routes.js"></script>
+
+        
       <script type="text/javascript" src="/application.js"></script>
       
   </body>
